fixed whitespace on download page

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@ h2 {
 
 img {
     display: block;
-    max-width: 100%;
+    max-width: 100%; 
 }
 
 a,
@@ -66,6 +66,9 @@ button {
 
 #banner {
     background-size: cover;
+   min-height: 100vh;
+    width: 100%;
+}
 }
 
 /********** banner **********/
